# toolbox

./: Cargo.toml
src/: main.rs  password_generator.rs  test.glade
src/gui/: main.glade
